--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -11,6 +11,7 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarsExample04">
         <ul class="navbar-nav">
+
           <li class="nav-item"><a class="nav-link" href="/bestand">Fahrzeuge</a>
             <div class="subdropdonw">
               <div class="menucontent">
@@ -149,8 +150,8 @@
             AA
           </div>
           <div class="dropdown-menu shadow-sm" aria-labelledby="dropdownMenuButton">
-            <a class="dropdown-item">Kundennr.: 512463</a>
-            <a class="dropdown-item">Logout</a>
+            <a class="dropdown-item" href="#">Kundennr.: 512463</a>
+            <a class="dropdown-item" href="#">Logout</a>
           </div>
         </div>
         <!-- <div class="user-profile-icon">AA</div> -->
