--- a/app/views/bestand/index.html.erb
+++ b/app/views/bestand/index.html.erb
@@ -8,9 +8,7 @@
   <meta name='viewport' content='width=device-width, initial-scale=1'>
   <%= stylesheet_link_tag "bootstrap.min.css", media: "screen" %>
   <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link
-    href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,600;0,800;1,200;1,400&display=swap"
-    rel="stylesheet">
+  <%= stylesheet_link_tag "https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,600;0,800;1,200;1,400&display=swap" %>
   <%= stylesheet_link_tag "style", media: "screen" %>
   <%= stylesheet_link_tag href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" %>
 </head>
@@ -41,7 +39,7 @@
                           style: "width:100px;" %>
                     </td>
                     <td align="left" valign="top">
-                      <a href="bearbeiten"> <b>A8 4.2 quattro Langversion 4 Türen</b> </a><br />
+                      <%= link_to "<b>A8 4.2 quattro Langversion 4 Türen</b>", "bearbeiten" %><br />
                       Pkw- Limousine - Gebraucht<br />
                       EZ: 16.03.06, Benzin
                     </td>
@@ -305,7 +303,7 @@
                           <option value="SEMIAUTOMATIC">Halbautomatik</option>
                         </select>
                       </div>
-                      <a href="#" class="d-block text-decoration-none px-3">
+x                      <a href="#" class="d-block text-decoration-none px-3">
                         <i class="fa fa-search pe-1" aria-hidden="true"></i>
                         Suchen</a>
                       <a href="#" class="d-block text-decoration-none px-3 mb-4 mt-2"><i
@@ -315,156 +313,7 @@
                   </div>
                 </div>
               </div>
-              <div class="accordion-box">
-                <button class="headding" data-toggle="collapse" data-target="#collapse-two"
-                        aria-expanded="false" aria-controls="collapse">
-                  <span class="icon"></span> FILTER
-                </button>
-                <div class="card-text collapse" id="collapse-two">
-                  <div class="row">
-                    <div class="col-md-12 col-sm-12">
-                      <div class="mb-1 mt-3">
-                        <input class="form-check-input" type="checkbox" value="" id="Mehr">
-                        <label class="form-check-label" for="Mehr">
-                          Mehr als 90 Tage im Bestand</label>
-                      </div>
-                      <div class="mb-1">
-                        <input class="form-check-input" type="checkbox" value="" id="Keine">
-                        <label class="form-check-label" for="Keine">
-                          Keine Bilder</label>
-                      </div>
-                      <div class="mb-1">
-                        <input class="form-check-input" type="checkbox" value=""
-                               id="Unvollständig">
-                        <label class="form-check-label" for="Unvollständig">
-                          Unvollständig</label>
-                      </div>
-                      <hr />
-                      <div class="mb-1">
-                        <input class="form-check-input" type="checkbox" value=""
-                               id="Verkauft">
-                        <label class="form-check-label" for="Verkauft">
-                          Verkauft</label>
-                      </div>
-                      <div class="mb-1">
-                        <input class="form-check-input" type="checkbox" value=""
-                               id="Reserviert">
-                        <label class="form-check-label" for="Reserviert">
-                          Reserviert</label>
-                      </div>
-                      <div class="mb-1">
-                        <input class="form-check-input" type="checkbox" value=""
-                               id="reserviert">
-                        <label class="form-check-label" for="reserviert">
-                          Nicht reserviert</label>
-                      </div>
-                      <hr />
-                      <div class="mb-1">
-                        <input class="form-check-input" type="checkbox" value=""
-                               id="inseriert">
-                        <label class="form-check-label" for="inseriert">
-                          Nicht inseriert</label>
-                      </div>
-                      <div class="mb-1">
-                        <input class="form-check-input" type="checkbox" value=""
-                               id="Inseriert">
-                        <label class="form-check-label" for="Inseriert">
-                          Inseriert</label>
-                      </div>
-                      <hr />
-                      <div class="mb-1">
-                        <input class="form-check-input" type="checkbox" value=""
-                               id="Neufahrzeuge">
-                        <label class="form-check-label" for="Neufahrzeuge">
-                          Neufahrzeuge</label>
-                      </div>
-                      <div class="mb-1">
-                        <input class="form-check-input" type="checkbox" value=""
-                               id="Gebrauchtfahrzeuge">
-                        <label class="form-check-label" for="Gebrauchtfahrzeuge">
-                          Gebrauchtfahrzeuge</label>
-                      </div>
-                      <hr />
-                      <div class="mb-1">
-                        <input class="form-check-input" type="checkbox" value=""
-                               id="Vorführfahreuge">
-                        <label class="form-check-label" for="Vorführfahreuge">
-                          Vorführfahreuge</label>
-                      </div>
-                      <div class="mb-1">
-                        <input class="form-check-input" type="checkbox" value=""
-                               id="Tageszulassungen">
-                        <label class="form-check-label" for="Tageszulassungen">
-                          Tageszulassungen</label>
-                      </div>
-                      <hr />
-                      <div class="mb-1">
-                        <input class="form-check-input" type="checkbox" value="" id="Pkw">
-                        <label class="form-check-label" for="Pkw">
-                          Pkw</label>
-                      </div>
-                      <div class="mb-1">
-                        <input class="form-check-input" type="checkbox" value="" id="Lkw">
-                        <label class="form-check-label" for="Lkw">
-                          Lkw bis 7,5t</label>
-                      </div>
-                      <div class="mb-1">
-                        <input class="form-check-input" type="checkbox" value="" id="WoMo">
-                        <label class="form-check-label" for="WoMo">
-                          WoMo</label>
-                      </div>
-                      <div class="mb-1">
-                        <input class="form-check-input" type="checkbox" value="" id="Krad">
-                        <label class="form-check-label" for="Krad">
-                          Krad</label>
-                      </div>
-                      <div class="mb-1">
-                        <input class="form-check-input" type="checkbox" value="" id="über">
-                        <label class="form-check-label" for="über">
-                          Lkw über 7,5t</label>
-                      </div>
-                      <div class="mb-1">
-                        <input class="form-check-input" type="checkbox" value=""
-                               id="Anhänger">
-                        <label class="form-check-label" for="Anhänger">
-                          Anhänger</label>
-                      </div>
-                      <div class="mb-1">
-                        <input class="form-check-input" type="checkbox" value="" id="SZM">
-                        <label class="form-check-label" for="SZM">
-                          SZM</label>
-                      </div>
-                      <div class="mb-1">
-                        <input class="form-check-input" type="checkbox" value=""
-                               id="Auflieger">
-                        <label class="form-check-label" for="Auflieger">
-                          Auflieger</label>
-                      </div>
-                      <div class="mb-1">
-                        <input class="form-check-input" type="checkbox" value="" id="Bauma">
-                        <label class="form-check-label" for="Bauma">
-                          Bauma</label>
-                      </div>
-                      <div class="mb-1">
-                        <input class="form-check-input" type="checkbox" value="" id="Agrar">
-                        <label class="form-check-label" for="Agrar">
-                          Agrar</label>
-                      </div>
-                      <div class="mb-1">
-                        <input class="form-check-input" type="checkbox" value=""
-                               id="Stapler">
-                        <label class="form-check-label" for="Stapler">
-                          Stapler</label>
-                      </div>
-                      <div class="mb-1">
-                        <input class="form-check-input" type="checkbox" value="" id="Busse">
-                        <label class="form-check-label" for="Busse">
-                          Busse</label>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
+              <%= render "layouts/collapsed" %>
             </div>
           </div>
         </div>
